@@ -4,3 +4,7 @@ git add .
 git commit -m "first commit"
 git branch -M main
 git push -u origin main
+
+
+
+##java -jar --add-opens java.base/java.io=ALL-UNNAMED fileoperations-1.0-SNAPSHOT-jar-with-dependencies.jar
